update UI, organized inputs

--- a/public/index.html
+++ b/public/index.html
@@ -6,19 +6,22 @@
  <link rel="stylesheet" href="/css/simplesimon.css">
 
  <body>
- <button id="scan">SCAN</button>
+
  <div class="container">
 	<div id="blip"></div>
 		<div id="radarbackground">
 	 		<img id="radar" src="radarexample.jpg">
 	 	</div>
  </div>
-<button class="missile" id="mq1">quadrant 1</button>
-<button class="missile" id="mq2">quadrant 2</button>
-<button class="missile" id="mq3">quadrant 3</button>
-<button class="missile" id="mq4">quadrant 4</button>
-<button class="missileDefense" id=fire>LAUNCH</button>
-<button class="reset" id="reset">reset</button>
+ <div class="buttonsContainer">
+ 	<button id="scan">SCAN</button>
+	<button class="missile" id="mq1">quadrant 1</button>
+	<button class="missile" id="mq2">quadrant 2</button>
+	<button class="missile" id="mq3">quadrant 3</button>
+	<button class="missile" id="mq4">quadrant 4</button>
+	<button class="missileDefense" id=fire>LAUNCH</button>
+	<button class="reset" id="reset">reset</button>
+</div>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
 <script src="/js/simplesimon.js"></script>
  </body>
