--- a/public/index.html
+++ b/public/index.html
@@ -6,24 +6,26 @@
  <link rel="stylesheet" href="/css/simplesimon.css">
 
  <body>
-
- <div class="container">
-	<div id="blip"></div>
-		<div id="radarbackground">
-	 		<img id="radar" src="radarexample.jpg">
-	 	</div>
- </div>
- <div class="buttonsContainer">
- 	<button id="scan">SCAN</button>
-	<button class="missile" id="mq1">quadrant 1</button>
-	<button class="missile" id="mq2">quadrant 2</button>
-	<button class="missile" id="mq3">quadrant 3</button>
-	<button class="missile" id="mq4">quadrant 4</button>
-	<button class="missileDefense" id=fire>LAUNCH</button>
-	<button class="reset" id="reset">reset</button>
-</div>
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
-<script src="/js/simplesimon.js"></script>
+ 	<div class="container">
+		<div id="blip"></div>
+			<div class="imgcontainer" >
+		 		<img id="radar" src="/radar.gif">
+		 	</div>
+			<div id="radarbackground">
+		 		<!-- <img id="radar" src="radarexample.jpg"> -->
+		 	</div>
+	</div>
+	<div class="buttonsContainer">
+		<button id="scan">SCAN</button>
+		<button class="missile" id="mq1">quadrant 1</button>
+		<button class="missile" id="mq2">quadrant 2</button>
+		<button class="missile" id="mq3">quadrant 3</button>
+		<button class="missile" id="mq4">quadrant 4</button>
+		<button class="missileDefense" id=fire>LAUNCH</button>
+		<button class="reset" id="reset">reset</button>
+	</div>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
+	<script src="/js/simplesimon.js"></script>
  </body>
  </html>
 
