add end video playback feature

--- a/public/index.html
+++ b/public/index.html
@@ -4,8 +4,10 @@
  	<title>Simple Simon</title>
  </head>
  <link rel="stylesheet" href="/css/simplesimon.css">
-
  <body>
+ 	<video id="end" controls>
+ 		<source src="/videos/endbomb.mp4" type="video/mp4">
+ 	</video>
  	<div class="container">
 		<div id="blip"></div>
 			<div class="imgcontainer" >
