--- a/public/index.html
+++ b/public/index.html
@@ -5,9 +5,7 @@
  </head>
  <link rel="stylesheet" href="/css/simplesimon.css">
  <body>
- 	<video id="end" controls>
- 		<source src="/videos/endbomb.mp4" type="video/mp4">
- 	</video>
+ 	<div id="video"></div>
  	<div class="container">
 		<div id="blip"></div>
 			<div class="imgcontainer" >
