restylized buttons, moved button placement to around radar scope

--- a/public/index.html
+++ b/public/index.html
@@ -7,20 +7,23 @@
  <body>
  	<div id="video"></div>
  	<div class="container">
+		<div id="rightside">
+			<button class="missile" id="mq2">quadrant 2</button>
+			<button class="missile" id="mq3">quadrant 3</button>
+		</div>
+		<div id="leftside">
+			<button class="missile" id="mq1">quadrant 1</button>
+			<button class="missile" id="mq4">quadrant 4</button>
+		</div>
 		<div id="blip"></div>
 			<div class="imgcontainer" >
 		 		<img id="radar" src="/radar.gif">
 		 	</div>
 			<div id="radarbackground">
-		 		<!-- <img id="radar" src="radarexample.jpg"> -->
 		 	</div>
 	</div>
 	<div class="buttonsContainer">
 		<button id="scan">SCAN</button>
-		<button class="missile" id="mq1">quadrant 1</button>
-		<button class="missile" id="mq2">quadrant 2</button>
-		<button class="missile" id="mq3">quadrant 3</button>
-		<button class="missile" id="mq4">quadrant 4</button>
 		<button class="missileDefense" id=fire>LAUNCH</button>
 		<button class="reset" id="reset">reset</button>
 	</div>
