add wave counter

--- a/public/index.html
+++ b/public/index.html
@@ -7,13 +7,14 @@
  <body>
  	<div id="video"></div>
  	<div class="container">
+		<div id="counter">WAVE: <span id="wave">0</span></div>
 		<div id="rightside">
-			<button class="missile" id="mq2">quadrant 2</button>
-			<button class="missile" id="mq3">quadrant 3</button>
+			<button class="missile" id="mq2">SECTOR 2</button>
+			<button class="missile" id="mq3">SECTOR 3</button>
 		</div>
 		<div id="leftside">
-			<button class="missile" id="mq1">quadrant 1</button>
-			<button class="missile" id="mq4">quadrant 4</button>
+			<button class="missile" id="mq1">SECTOR 1</button>
+			<button class="missile" id="mq4">SECTOR 4</button>
 		</div>
 		<div id="blip"></div>
 			<div class="imgcontainer" >
@@ -31,5 +32,3 @@
 	<script src="/js/simplesimon.js"></script>
  </body>
  </html>
-
- <!--  -->
